// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageLayout component tests check isNavOpen boolean 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <header
      class="pf-c-page__header"
      data-ouia-header="true"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-label="Global navigation"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            id="nav-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="pf-c-page__header-brand-link"
        >
          <img
            alt="Kogito logo"
            class="pf-c-brand"
            src="../../../../static/kogito.png"
          />
        </a>
      </div>
      <div
        class="pf-c-page__header-tools"
      />
    </header>
    <div
      aria-hidden="true"
      class="pf-c-page__sidebar pf-m-collapsed"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        page Navigation elements
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      children rendered
    </main>
  </div>
</div>
`;

exports[`PageLayout component tests open with PageSidebar closed 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <header
      class="pf-c-page__header"
      data-ouia-header="true"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="false"
            aria-label="Global navigation"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            id="nav-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="pf-c-page__header-brand-link"
        >
          <img
            alt="Kogito logo"
            class="pf-c-brand"
            src="../../../../static/kogito.png"
          />
        </a>
      </div>
      <div
        class="pf-c-page__header-tools"
      />
    </header>
    <div
      aria-hidden="true"
      class="pf-c-page__sidebar pf-m-collapsed"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        page Navigation elements
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      children rendered
    </main>
  </div>
</div>
`;

exports[`PageLayout component tests snapshot tests 1`] = `
<div>
  <div
    class="pf-c-page pf-m-resize-observer pf-m-breakpoint-default pf-m-height-breakpoint-sm kogito-consoles-common--PageLayout"
    data-ouia-component-type="page"
    data-ouia-safe="true"
  >
    <header
      class="pf-c-page__header"
      data-ouia-header="true"
    >
      <div
        class="pf-c-page__header-brand"
      >
        <div
          class="pf-c-page__header-brand-toggle"
        >
          <button
            aria-disabled="false"
            aria-expanded="true"
            aria-label="Global navigation"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            id="nav-toggle"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 448 512"
              width="1em"
            >
              <path
                d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
              />
            </svg>
          </button>
        </div>
        <a
          class="pf-c-page__header-brand-link"
        >
          <img
            alt="Kogito logo"
            class="pf-c-brand"
            src="../../../../static/kogito.png"
          />
        </a>
      </div>
      <div
        class="pf-c-page__header-tools"
      />
    </header>
    <div
      aria-hidden="false"
      class="pf-c-page__sidebar pf-m-expanded"
      data-ouia-navigation="true"
      data-testid="page-sidebar"
      id="page-sidebar"
    >
      <div
        class="pf-c-page__sidebar-body"
      >
        page Navigation elements
      </div>
    </div>
    <main
      class="pf-c-page__main"
      data-ouia-main="true"
      id="main-content-page-layout-default-nav"
      tabindex="-1"
    >
      children rendered
    </main>
  </div>
</div>
`;
